--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p>
                 Aqui temos as melhores frutas para sua mesa, Com muitas variedades prontas para satisfazer seu apetite aproveite.
             </p>
-            <img src="foto1.jpeg" width="350px">
+            <img src="https://raw.githubusercontent.com/nemcod/Sacol-obahia/main/foto1.jpeg" width="350px">
             <p>
                 Temos uma ótima variedade de frutas e verduras com o menor preço do mercado.
             </p>
